--- a/package.json
+++ b/package.json
@@ -9,19 +9,26 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "next": "14.0.4",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.0.4"
+    "zzzzz-last-dependencies": "github:AngelsProgram/zzzzz-last-dependency#install"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@aaa-project-full/aaa-config": "github:AngelsProgram/aaa-config",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
+    "eslint-config-next": "14.0.4",
     "postcss": "^8",
     "tailwindcss": "^3.3.0",
-    "eslint": "^8",
-    "eslint-config-next": "14.0.4"
+    "zzzzz-last-devdependencies": "github:AngelsProgram/zzzzz-last-dependency#install"
+  },
+  "optionalDependencies": {
+    "zzzzz-last-optionaldependencies": "github:AngelsProgram/zzzzz-last-dependency#install"
+  },
+  "peerDependencies": {
+    "zzzzz-last-peerdependencies": "github:AngelsProgram/zzzzz-last-dependency#install"
   }
 }
